# dakku

./: .clang-format  .clangd  .gitignore  404.html  CMakeLists.txt  Doxyfile  README.md  doxybook-config.json  index.html  mkdocs.yml  sitemap.xml  vcpkg.json  xmake.lua
.github/workflows/: build.yml  doc.yml  linux.yml  windows.yml
Classes/: index.html
Classes/classMainWindow/: index.html
Classes/classdakku_1_1BSDF/: index.html
Classes/classdakku_1_1BinaryVectorExpression/: index.html
Classes/classdakku_1_1BlockedArray/: index.html
Classes/classdakku_1_1Bounds2/: index.html
Classes/classdakku_1_1Bounds2iIterator/: index.html
Classes/classdakku_1_1Bounds3/: index.html
Classes/classdakku_1_1BoundsBase/: index.html
Classes/classdakku_1_1BoxFilter/: index.html
Classes/classdakku_1_1BxDF/: index.html
Classes/classdakku_1_1Camera/: index.html
Classes/classdakku_1_1Class/: index.html
Classes/classdakku_1_1CoefficientSpectrum/: index.html
Classes/classdakku_1_1ConstantTexture/: index.html
Classes/classdakku_1_1ContantTexture/: index.html
Classes/classdakku_1_1FileInputStream/: index.html
Classes/classdakku_1_1FileOutputStream/: index.html
Classes/classdakku_1_1Film/: index.html
Classes/classdakku_1_1FilmImageProvider/: index.html
Classes/classdakku_1_1FilmTile/: index.html
Classes/classdakku_1_1Filter/: index.html
Classes/classdakku_1_1GlobalMemoryArena/: index.html
Classes/classdakku_1_1GuiEngine/: index.html
Classes/classdakku_1_1ImageTexture/: index.html
Classes/classdakku_1_1InputStream/: index.html
Classes/classdakku_1_1L1CacheLineAlignedResource/: index.html
Classes/classdakku_1_1Logger/: index.html
Classes/classdakku_1_1Lua/: index.html
Classes/classdakku_1_1MemoryArena/: index.html
Classes/classdakku_1_1MipMap/: index.html
Classes/classdakku_1_1Normal/: index.html
Classes/classdakku_1_1Object/: index.html
Classes/classdakku_1_1OutputStream/: index.html
Classes/classdakku_1_1PerspectiveCamera/: index.html
Classes/classdakku_1_1PixelSampler/: index.html
Classes/classdakku_1_1Point/: index.html
Classes/classdakku_1_1ProjectiveCamera/: index.html
Classes/classdakku_1_1Property/: index.html
Classes/classdakku_1_1RNG/: index.html
Classes/classdakku_1_1Ray/: index.html
Classes/classdakku_1_1RayDifferential/: index.html
Classes/classdakku_1_1RelativeRoot/: index.html
Classes/classdakku_1_1RenderState/: index.html
Classes/classdakku_1_1RgbSpectrum/: index.html
Classes/classdakku_1_1Sampler/: index.html
Classes/classdakku_1_1SerializableObject/: index.html
Classes/classdakku_1_1Shape/: index.html
Classes/classdakku_1_1SurfaceInteraction/: index.html
Classes/classdakku_1_1Texture/: index.html
Classes/classdakku_1_1TextureMapping2D/: index.html
Examples/: index.html
Files/: index.html
Modules/: index.html
Namespaces/: index.html
Pages/: index.html
assets/: scene.json
scenes/: cornell_box.json  schema.json  test.lua
search/: search_index.json
src/: CMakeLists.txt  dakku.h  defines.h.in  platform.h  xmake.lua
src/accelerators/: CMakeLists.txt  api.h  embree_accel.cpp  embree_accel.h
src/cameras/: CMakeLists.txt  api.h  fwd.h  perspective.cpp  perspective.h  xmake.lua
src/core/: CMakeLists.txt  api.h  blocked_array.h  bounds.cpp  bounds.h  camera.cpp  camera.h  class.cpp  class.h  constants.h  film.cpp  film.h  filter.cpp  filter.h  fstream.cpp  fstream.h  fwd.h  geometry.cpp  geometry.h  image.cpp  integrator.cpp  integrator.h  interaction.cpp  interaction.h  light.cpp  light.h  logger.cpp  logger.h  lua.cpp  lua.h  material.cpp  material.h  math.h  math_func.cpp  math_func.h  memory.cpp  memory.h  microfacet.cpp  microfacet.h  mipmap.h  (+41 more)
src/filters/: CMakeLists.txt  api.h  box.cpp  box.h  fwd.h  triangle.cpp  triangle.h  xmake.lua
src/gui/: CMakeLists.txt  engine.cpp  engine.h  film.cpp  film.h  main.cpp  main.qml  mainwindow.h  window.cpp  window.h  xmake.lua
src/imageio/: fwd.h  imageio.cpp  imageio.h  xmake.lua
src/integrators/: CMakeLists.txt  api.h  path.cpp  path.h
src/lights/: CMakeLists.txt  api.h  diffuse.cpp  diffuse.h  distant.cpp  distant.h
src/logger/: CMakeLists.txt  fwd.h  logger.cpp  logger.h  xmake.lua
src/main/: CMakeLists.txt  dakku.cpp  main.cpp  xmake.lua
src/materials/: CMakeLists.txt  api.h  glass.cpp  glass.h  matte.cpp  matte.h  metal.cpp  metal.h  mirror.cpp  mirror.h
src/math/: fwd.h  test.cpp  vector.h  vector_base.h  xmake.lua
src/samplers/: CMakeLists.txt  api.h  random.cpp  random.h
src/shapes/: CMakeLists.txt  api.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/stream/: api.h  fstream.cpp  fstream.h  fwd.h  xmake.lua
src/textures/: CMakeLists.txt  api.h  constant.cpp  constant.h  fwd.h  image.cpp  image.h  imagemap.cpp  xmake.lua
tests/: CMakeLists.txt  bit.cpp  bounds.cpp  object.cpp  property.cpp  transform.cpp  vector.cpp  xmake.lua
tests/core/: bounds.cpp  geometry.cpp  ray.cpp  vector.cpp
xml/: Doxyfile.xml  blocked__array_8h.xml  bounds_8h.xml  box_8h.xml  camera_8h.xml  cameras_2api_8h.xml  cameras_2fwd_8h.xml  classMainWindow.xml  class_8h.xml  classdakku_1_1BSDF.xml  classdakku_1_1BinaryVectorExpression.xml  classdakku_1_1BlockedArray.xml  classdakku_1_1Bounds2.xml  classdakku_1_1Bounds2iIterator.xml  classdakku_1_1Bounds3.xml  classdakku_1_1BoundsBase.xml  classdakku_1_1BoxFilter.xml  classdakku_1_1BxDF.xml  classdakku_1_1Camera.xml  classdakku_1_1Class.xml  classdakku_1_1CoefficientSpectrum.xml  classdakku_1_1ConstantTexture.xml  classdakku_1_1ContantTexture.xml  classdakku_1_1FileInputStream.xml  classdakku_1_1FileOutputStream.xml  classdakku_1_1Film.xml  classdakku_1_1FilmImageProvider.xml  classdakku_1_1FilmTile.xml  classdakku_1_1Filter.xml  classdakku_1_1GlobalMemoryArena.xml  classdakku_1_1GuiEngine.xml  classdakku_1_1ImageTexture.xml  classdakku_1_1InputStream.xml  classdakku_1_1L1CacheLineAlignedResource.xml  classdakku_1_1Logger.xml  classdakku_1_1Lua.xml  classdakku_1_1MemoryArena.xml  classdakku_1_1MipMap.xml  classdakku_1_1Normal.xml  classdakku_1_1Object.xml  (+114 more)
(+133 files in other folders)
